ajuste de links relativos

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
         <div class="col-b">
           <img
-            src="/nlw/assets/mulher-negra-sorrindo-com-as-duas-maos-no-peito.png"
+            src="./assets/mulher-negra-sorrindo-com-as-duas-maos-no-peito.png"
             alt="Mulher negra vestindo moleton verde e sorrindo"
           />
         </div>
@@ -624,7 +624,7 @@
 
         <div class="col-b">
           <img
-            src="assets/homem-branco-protético-desenvolvendo-preteses-dentárias.png"
+            src="./assets/homem-branco-protético-desenvolvendo-preteses-dentárias.png"
             alt="Homem branco protético desenvolvedo preteses dentárias"
           />
         </div>
@@ -714,7 +714,7 @@
         </div>
         <div class="col-b">
           <img
-            src="assets/prótese-dentária-sendo-desenvolvida.png"
+            src="./assets/prótese-dentária-sendo-desenvolvida.png"
             alt="Protese dentaria sendo desenvolvida"
           />
         </div>
@@ -1023,6 +1023,6 @@
 
     <!--ScrollReveal Lib -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
