ajuste home header h1

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="col-a">
           <header>
             <h4>BOAS-VINDAS AO LABORATÓRIO HERCULES BIAZIN 👋</h4>
-            <h1>Próteses dentárias que tranformam sorrisos</h1>
+            <h1>Próteses dentárias que transformam sorrisos</h1>
           </header>
 
           <div class="content">
